--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.45.4",
-    "next": "15.0.2",
+    "next": "^15.5.6",
     "openai": "^4.67.3",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
@@ -26,7 +26,6 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.2"
+    "vitest": "^4.0.6"
   }
 }
-
